--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = [
     "setuptools>=42",
     "wheel", 
-    "termcolor", 
+    "termcolor>=1.1.0", 
     "pyyaml"
 ]
 build-backend = "setuptools.build_meta"
